--- a/publications.bib
+++ b/publications.bib
@@ -33,7 +33,8 @@
   pages = {236--240},
   doi = {10.1109/CAMSAP45676.2019.9022643},
   abstract = {We consider the problem of inferring sparse Gaussian graphical models with Laplacian constraints, which can also be viewed as learning a graph Laplacian such that the observed graph signals are smooth with respect to it. A block coordinate descent algorithm is proposed for the resulting linearly constrained log-determinant maximum likelihood estimation problem with sparse regularization. Simulation results on synthetic data show the efficiency of our proposed algorithm.},
-  copyright = {All rights reserved}
+  copyright = {All rights reserved},
+  keywords = {Block Coordinate Descent,Covariance matrix,Gaussian Markov Random Field(GMRF) / Gaussian graphical model,graph Laplacian learning,ObsNote,Sparse matrix}
 }
 
 @article{liuExtendedSuccessiveConvex2022a,
@@ -45,7 +46,8 @@
   pages = {6300--6315},
   issn = {1941-0476},
   doi = {10.1109/TSP.2022.3233253},
-  abstract = {Phase retrieval aims at recovering unknown signals from magnitude measurements of linear mixtures. In this paper, we consider the phase retrieval with dictionary learning problem, which includes another prior information that the signal admits a sparse representation over an unknown dictionary. The task is to jointly estimate the dictionary and the sparse representation from magnitude-only measurements. To this end, we study two complementary formulations and develop efficient parallel algorithms by extending the successive convex approximation framework using a smooth majorization. The first algorithm is termed compact-SCAphase and is preferable in the case of moderately diverse mixture models with a low number of mixing components. It adopts a compact formulation that avoids auxiliary variables. The proposed algorithm is highly scalable and has reduced parameter tuning cost. The second algorithm, referred to as SCAphase, uses auxiliary variables and is favorable in the case of highly diverse mixture models. It also renders simple incorporation of additional side constraints. The performance of both methods is evaluated when applied to blind channel estimation from subband magnitude measurements in a multi-antenna random access network. Simulation results show the efficiency of the proposed techniques compared to state-of-the-art methods.}
+  abstract = {Phase retrieval aims at recovering unknown signals from magnitude measurements of linear mixtures. In this paper, we consider the phase retrieval with dictionary learning problem, which includes another prior information that the signal admits a sparse representation over an unknown dictionary. The task is to jointly estimate the dictionary and the sparse representation from magnitude-only measurements. To this end, we study two complementary formulations and develop efficient parallel algorithms by extending the successive convex approximation framework using a smooth majorization. The first algorithm is termed compact-SCAphase and is preferable in the case of moderately diverse mixture models with a low number of mixing components. It adopts a compact formulation that avoids auxiliary variables. The proposed algorithm is highly scalable and has reduced parameter tuning cost. The second algorithm, referred to as SCAphase, uses auxiliary variables and is favorable in the case of highly diverse mixture models. It also renders simple incorporation of additional side constraints. The performance of both methods is evaluated when applied to blind channel estimation from subband magnitude measurements in a multi-antenna random access network. Simulation results show the efficiency of the proposed techniques compared to state-of-the-art methods.},
+  keywords = {ObsNote}
 }
 
 @inproceedings{liuGridlessParameterEstimation2024,
@@ -86,8 +88,8 @@
   abstract = {The multiple measurement vectors (MMV) problem refers to the joint estimation of multiple signal realizations where the signal samples share a common sparse support over a known dictionary, which is a fundamental challenge in various applications in signal processing, e.g., direction-of-arrival (DOA) estimation. We consider the maximum a posteriori (MAP) estimation of an MMV problem, which is classically formulated as a regularized least-squares (LS) problem with an {\textbackslash}ell\textsubscript{2,0}-norm constraint and derive an equivalent mixed-integer semidefinite program (MISDP) reformulation, which can be solved by state-of-the-art numerical MISDP solvers at an affordable computation time. Numerical simulations in the context of DOA estimation demonstrate the improved error performance of our proposed method in comparison to several popular DOA estimation methods.}
 }
 
-@misc{liuMaximumPosterioriDirectionofArrival2024,
-  title = {Maximum A Posteriori Direction-of-Arrival Estimation via Mixed-Integer Semidefinite Programming},
+@misc{liuMaximumPosterioriDirectionofarrival2024,
+  title = {Maximum a posteriori direction-of-arrival estimation via mixed-integer semidefinite programming},
   author = {Liu, Tianyi and Matter, Frederic and Sorg, Alexander and Pfetsch, Marc E. and Haardt, Martin and Pesavento, Marius},
   year = {2024},
   month = oct,
